tests/paczka1/small_fuzzy/58662219.err
Error in line 7: nvoR3GYKIs A966 62,2
Error in line 9: nvoR3GYKIs A539 55,5
